apps/mealie/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mealie
  labels:
    istio-injection: enabled
