apps/mealie/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: mealie
spec:
  type: ClusterIP
  selector:
    app: mealie
  ports:
    - name: http
      port: 80
      targetPort: http
